--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -5,3 +5,5 @@
 - import_tasks: setup_security.yml
 - import_tasks: setup_user.yml
 - import_tasks: setup_access.yml
+- import_tasks: setup_nvidia.yml
+  when: with_nvidia_gpu is defined
