--- a/ansible/roles/infra_ml/vars/main.yml
+++ b/ansible/roles/infra_ml/vars/main.yml
@@ -8,3 +8,10 @@ AUDIO_WEBUI_VERSION: "Dockerize"
 AUDIO_WEBUI_PORT: "8061"
 AUDIO_WEBUI_EXTERNAL_URL: "audio.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 AUDIO_WEBUI_DEFAULT_STATE: stopped
+
+TEXT_WEBUI_VERSION: "main"
+TEXT_WEBUI_PORT: "8062"
+TEXT_WEBUI_API_PORT: "8063"
+TEXT_WEBUI_STEAM_PORT: "8064"
+TEXT_WEBUI_EXTERNAL_URL: "text.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
+TEXT_WEBUI_DEFAULT_STATE: stopped
