--- a/ansible/roles/infra/tasks/setup_https.yml
+++ b/ansible/roles/infra/tasks/setup_https.yml
@@ -76,6 +76,9 @@
       - "{{ ONLYOFFICE_PORT }}:{{ ONLYOFFICE_PORT }}"
       - "{{ LABEL_STUDIO_PORT }}:{{ LABEL_STUDIO_PORT }}"
       - "{{ AUDIO_WEBUI_PORT }}:{{ AUDIO_WEBUI_PORT }}"
+      - "{{ TEXT_WEBUI_PORT }}:{{ TEXT_WEBUI_PORT }}"
+      - "{{ TEXT_WEBUI_API_PORT }}:{{ TEXT_WEBUI_API_PORT }}"
+      - "{{ TEXT_WEBUI_STEAM_PORT }}:{{ TEXT_WEBUI_STEAM_PORT }}"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/{{ DATACORE }}/traefik/certs/:/certs/"
