--- a/ansible/roles/infra/vars/main.yml
+++ b/ansible/roles/infra/vars/main.yml
@@ -35,6 +35,9 @@ TRAEFIK_ENTRYPOINT_MAP:
   - { port: "{{ ONLYOFFICE_PORT }}", name: "onlyoffice" }
   - { port: "{{ LABEL_STUDIO_PORT }}", name: "label_studio" }
   - { port: "{{ AUDIO_WEBUI_PORT }}", name: "audio_webui" }
+  - { port: "{{ TEXT_WEBUI_PORT }}", name: "text_webui" }
+  - { port: "{{ TEXT_WEBUI_API_PORT }}", name: "text_webui_api" }
+  - { port: "{{ TEXT_WEBUI_STEAM_PORT }}", name: "text_webui_stream" }
 
 HOMEPAGE_VERSION: "latest"
 HOMEPAGE_FRONT_PORT: "8001"
