--- a/ansible/roles/infra/files/homepage/services.yaml
+++ b/ansible/roles/infra/files/homepage/services.yaml
@@ -143,3 +143,9 @@
         href: https://{{ HOMEPAGE_DOMAIN }}:{{ TEXT_WEBUI_PORT }}
         description: "A Gradio web UI for Large Language Models. Supports transformers, GPTQ, llama.cpp (ggml), Llama models. (api on {{ TEXT_WEBUI_API_PORT | default('unknown') }}, stream on {{ TEXT_WEBUI_STEAM_PORT | default('unknown') }})"
         target: _blank
+    - Image-webui:
+        container: image_webui
+        icon: mdi-image-edit
+        href: https://{{ HOMEPAGE_DOMAIN }}:{{ IMAGE_WEBUI_PORT }}
+        description: "Easy Docker setup for Stable Diffusion with user-friendly UI ."
+        target: _blank
