--- a/ansible/roles/infra/tasks/setup_https.yml
+++ b/ansible/roles/infra/tasks/setup_https.yml
@@ -79,6 +79,7 @@
       - "{{ TEXT_WEBUI_PORT }}:{{ TEXT_WEBUI_PORT }}"
       - "{{ TEXT_WEBUI_API_PORT }}:{{ TEXT_WEBUI_API_PORT }}"
       - "{{ TEXT_WEBUI_STEAM_PORT }}:{{ TEXT_WEBUI_STEAM_PORT }}"
+      - "{{ IMAGE_WEBUI_PORT }}:{{ IMAGE_WEBUI_PORT }}"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/{{ DATACORE }}/traefik/certs/:/certs/"
