--- a/ansible/roles/infra/vars/main.yml
+++ b/ansible/roles/infra/vars/main.yml
@@ -38,6 +38,7 @@ TRAEFIK_ENTRYPOINT_MAP:
   - { port: "{{ TEXT_WEBUI_PORT }}", name: "text_webui" }
   - { port: "{{ TEXT_WEBUI_API_PORT }}", name: "text_webui_api" }
   - { port: "{{ TEXT_WEBUI_STEAM_PORT }}", name: "text_webui_stream" }
+  - { port: "{{ IMAGE_WEBUI_PORT }}", name: "image_webui" }
 
 HOMEPAGE_VERSION: "latest"
 HOMEPAGE_FRONT_PORT: "8001"
