--- a/ansible/roles/infra_ml/vars/main.yml
+++ b/ansible/roles/infra_ml/vars/main.yml
@@ -15,3 +15,8 @@ TEXT_WEBUI_API_PORT: "8063"
 TEXT_WEBUI_STEAM_PORT: "8064"
 TEXT_WEBUI_EXTERNAL_URL: "text.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 TEXT_WEBUI_DEFAULT_STATE: stopped
+
+IMAGE_WEBUI_VERSION: "master"
+IMAGE_WEBUI_PORT: "8065"
+IMAGE_WEBUI_EXTERNAL_URL: "image.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
+IMAGE_WEBUI_DEFAULT_STATE: stopped
