--- a/ansible/roles/infra/files/traefik/tls-certs.toml
+++ b/ansible/roles/infra/files/traefik/tls-certs.toml
@@ -2,5 +2,5 @@
 [tls.stores]
   [tls.stores.default]
     [tls.stores.default.defaultCertificate]
-      keyFile = "/certs/{{ DOMAIN_CERT_KEY_NAME }}"
-      certFile = "/certs/{{ DOMAIN_CERT_NAME }}"
+      keyFile = "/certs/{{ DOMAIN_CERT_KEY_NAME | default('default-key.pem') }}"
+      certFile = "/certs/{{ DOMAIN_CERT_NAME | default('default.pem') }}"
