--- a/ansible/roles/infra_ml/vars/main.yml
+++ b/ansible/roles/infra_ml/vars/main.yml
@@ -20,3 +20,8 @@ IMAGE_WEBUI_VERSION: "master"
 IMAGE_WEBUI_PORT: "8065"
 IMAGE_WEBUI_EXTERNAL_URL: "image.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 IMAGE_WEBUI_DEFAULT_STATE: stopped
+
+LOCAL_AI_VERSION: "master"
+LOCAL_AI_PORT: "8066"
+LOCAL_AI_EXTERNAL_URL: "text.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
+LOCAL_AI_DEFAULT_STATE: stopped
