--- a/ansible/roles/infra/vars/main.yml
+++ b/ansible/roles/infra/vars/main.yml
@@ -39,7 +39,7 @@ TRAEFIK_ENTRYPOINT_MAP:
   - { port: "{{ TEXT_WEBUI_API_PORT }}", name: "text_webui_api" }
   - { port: "{{ TEXT_WEBUI_STEAM_PORT }}", name: "text_webui_stream" }
   - { port: "{{ IMAGE_WEBUI_PORT }}", name: "image_webui" }
-  - { port: "{{ LOCAL_AI_PORT }}", name: "localai" }
+  - { port: "{{ LLAMACPP_PORT }}", name: "llamacpp" }
 
 HOMEPAGE_VERSION: "latest"
 HOMEPAGE_FRONT_PORT: "8001"
