--- a/ansible/roles/infra_productivity/tasks/setup_onlyoffice.yml
+++ b/ansible/roles/infra_productivity/tasks/setup_onlyoffice.yml
@@ -9,6 +9,8 @@
     - onlyoffice
     - onlyoffice/data
     - onlyoffice/logs
+    - onlyoffice/certs
+    - onlyoffice/postgresql
 
 - name: "Launch onlyoffice container {{ ONLYOFFICE_VERSION }}"
   community.general.docker_container:
@@ -21,12 +23,16 @@
     timeout: "{{ DOCKER_TIMEOUT }}"
     ports:
 #      - "{{ ONLYOFFICE_PORT }}:80"
+    env:
+      JWT_ENABLED: "false"
     volumes:
-      - "/{{ DATACORE }}/onlyoffice/data:/var/www/onlyoffice/Data"
       - "/{{ DATACORE }}/onlyoffice/logs:/var/log/onlyoffice"
+      - "/{{ DATACORE }}/onlyoffice/data:/var/lib/onlyoffice"
+      - "/{{ DATACORE }}/onlyoffice/postgresql:/var/lib/postgresql"
+      - "/{{ DATACORE }}/onlyoffice/certs:/var/www/onlyoffice/Data"
     labels:
       traefik.enable: "true"
-      traefik.http.services.onlyoffice.loadbalancer.server.port: "80"
+      traefik.http.services.onlyoffice.loadbalancer.server.port: "8000"
       traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
       traefik.http.routers.onlyoffice_http.middlewares: "https_redirect"
       traefik.http.routers.onlyoffice_http.rule: "Host(`{{ ONLYOFFICE_EXTERNAL_URL }}`)"
@@ -35,7 +41,7 @@
       traefik.http.routers.onlyoffice_https.service: onlyoffice
       traefik.http.routers.onlyoffice_https.tls: "true"
       # add this to use traefik as a proxy with tls (http will not be available)
-      traefik.http.services.onlyoffice_proxy.loadbalancer.server.port: "80"
+      traefik.http.services.onlyoffice_proxy.loadbalancer.server.port: "8000"
       traefik.http.routers.onlyoffice_proxy.service: onlyoffice_proxy
       traefik.http.routers.onlyoffice_proxy.entrypoints: onlyoffice
       traefik.http.routers.onlyoffice_proxy.rule: "{{ global_proxy_rule }}"
