--- a/ansible/roles/common/tasks/setup_dependencies.yml
+++ b/ansible/roles/common/tasks/setup_dependencies.yml
@@ -1,7 +1,7 @@
 ---
 - name: "Install python, python-pip and usefull tools"
   ansible.builtin.apt:
-    pkg: [python3, python3-pip, apt-transport-https, ca-certificates, apache2-utils, software-properties-common, curl, nano, tree, htop, git]
+    pkg: [python3, python3-pip, apt-transport-https, ca-certificates, apache2-utils, software-properties-common, curl, nano, tree, htop, git, acl]
     state: present
     update_cache: true
     cache_valid_time: 3600
