fix deployement role for nexus

--- a/ansible/roles/infra_storage/tasks/setup_nexus.yml
+++ b/ansible/roles/infra_storage/tasks/setup_nexus.yml
@@ -233,7 +233,8 @@
         privileges: ["nx-repository-view-docker-docker-internal-*",
                      "nx-repository-view-pypi-pypi-internal-*",
                      "nx-repository-view-npm-npm-internal-*",
-                     "nx-repository-view-raw-artifacts-*"],
+                     "nx-repository-view-raw-artifacts-*",
+                     "nx-component-upload"],
         roles: []
       }
     - {
