--- a/ansible/identity/dev/vars.yml
+++ b/ansible/identity/dev/vars.yml
@@ -6,9 +6,9 @@ DOMAIN_CERT_KEY_NAME: ""
 DEFAULT_ADMIN_NAME: "admin"
 USER_NAME: "forge"
 USER_MAIL: "{{ USER_NAME }}@{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, 'exemple.org') }}"
-SKIP_SERVICES: ["peertube", "fdroid", "insolante"]
+SKIP_SERVICES: ["fdroid", "insolante"]
 # uncomment to test the new service
-# SKIP_SERVICES: ["peertube", "fdroid", "insolante", "gogs", "jenkins", "redmine", "domotic", "octoprint", "wordpress", "nexus", "grocy", "tools", "label", "audio", "text", "image", "llama"]
+# SKIP_SERVICES: ["fdroid", "insolante", "gogs", "jenkins", "redmine", "domotic", "octoprint", "wordpress", "nexus", "grocy", "tools", "label", "audio", "text", "image", "llama"]
 
 BACKUP_CONFIGURATION:
   BACKUP_TO_KEEP: 3
