--- a/ansible/roles/infra_ml/vars/main.yml
+++ b/ansible/roles/infra_ml/vars/main.yml
@@ -24,4 +24,4 @@ IMAGE_WEBUI_DEFAULT_STATE: stopped
 LLAMACPP_VERSION: "master"
 LLAMACPP_PORT: "8066"
 LLAMACPP_EXTERNAL_URL: "openai.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
-LLAMACPP_DEFAULT_STATE: stopped
+LLAMACPP_DEFAULT_STATE: started
