--- a/ansible/roles/infra/tasks/setup_https.yml
+++ b/ansible/roles/infra/tasks/setup_https.yml
@@ -77,6 +77,7 @@
       - "{{ TEXT_WEBUI_STEAM_PORT }}:{{ TEXT_WEBUI_STEAM_PORT }}"
       - "{{ IMAGE_WEBUI_PORT }}:{{ IMAGE_WEBUI_PORT }}"
       - "{{ LLAMACPP_PORT }}:{{ LLAMACPP_PORT }}"
+      - "{{ OLLAMA_API_PORT }}:{{ OLLAMA_API_PORT }}"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/{{ DATACORE }}/traefik/certs/:/certs/"
