--- a/ansible/identity/dev/vars.yml
+++ b/ansible/identity/dev/vars.yml
@@ -8,7 +8,7 @@ USER_NAME: "forge"
 USER_MAIL: "{{ USER_NAME }}@{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, 'exemple.org') }}"
 SKIP_SERVICES: ["fdroid", "insolante"]
 # uncomment to test the new service
-# SKIP_SERVICES: ["fdroid", "insolante", "gogs", "jenkins", "redmine", "domotic", "octoprint", "wordpress", "nexus", "grocy", "tools", "label", "audio", "text", "image", "llama"]
+# SKIP_SERVICES: ["fdroid", "insolante", "gogs", "jenkins", "redmine", "domotic", "octoprint", "wordpress", "nexus", "grocy", "tools", "label", "audio", "text", "image"]
 
 BACKUP_CONFIGURATION:
   BACKUP_TO_KEEP: 3
@@ -19,10 +19,7 @@ BACKUP_CONFIGURATION:
 
 # ==============================================================================
 # Text LLM default model
-
 TEXT_LLM_MODEL: ""
-TEXT_LLM_MODEL_FILE: ""
-TEXT_LLM_MODEL_URL: ""
 
 # Default stable diffusion webui [invoke | auto | auto-cpu | comfy | comfy-cpu]
 IMAGE_WEBUI: "auto"
