--- a/ansible/roles/infra_ml/tasks/setup_ollama_server.yml
+++ b/ansible/roles/infra_ml/tasks/setup_ollama_server.yml
@@ -27,7 +27,7 @@
     - absent
     - directory
 
-- name: "Launch ollama API container final state ({{ OLLAMA_API_DEFAULT_STATE }})"
+- name: "Launch ollama API container final state ({{ OLLAMA_API_DEFAULT_STATE }}) for GPU"
   community.general.docker_container:
     name: "ollama"
     hostname: "ollama"
@@ -36,6 +36,48 @@
     restart_policy: always
     recreate: yes
     timeout: "{{ DOCKER_TIMEOUT }}"
+    env:
+      OLLAMA_DEBUG: "true"
+    ports:
+  #      - "{{ OLLAMA_API_PORT }}:11434"
+    volumes:
+      - "/{{ DATACORE }}/ollama:/root/.ollama"
+    device_requests:
+      - device_ids: 0
+        driver: nvidia
+        capabilities:
+          - gpu
+          - compute
+          - utility
+    labels:
+      traefik.enable: "true"
+      traefik.http.services.ollama.loadbalancer.server.port: "11434"
+      traefik.http.middlewares.https_redirect.redirectscheme.scheme: "https"
+      traefik.http.routers.ollama_http.middlewares: "https_redirect"
+      traefik.http.routers.ollama_http.rule: "Host(`{{ OLLAMA_API_EXTERNAL_URL }}`)"
+      traefik.http.routers.ollama_http.service: ollama
+      traefik.http.routers.ollama_https.rule: "Host(`{{ OLLAMA_API_EXTERNAL_URL }}`)"
+      traefik.http.routers.ollama_https.service: ollama
+      traefik.http.routers.ollama_https.tls: "true"
+      # add this to use traefik as a proxy with tls (http will not be available)
+      traefik.http.services.ollama_proxy.loadbalancer.server.port: "11434"
+      traefik.http.routers.ollama_proxy.service: ollama_proxy
+      traefik.http.routers.ollama_proxy.entrypoints: ollama
+      traefik.http.routers.ollama_proxy.rule: "{{ global_proxy_rule }}"
+      traefik.http.routers.ollama_proxy.tls: "true"
+  when: with_nvidia_gpu is defined and with_nvidia_gpu == True
+
+- name: "Launch ollama API container final state ({{ OLLAMA_API_DEFAULT_STATE }}) for CPU"
+  community.general.docker_container:
+    name: "ollama"
+    hostname: "ollama"
+    image: "ollama/ollama:{{ OLLAMA_API_VERSION }}"
+    state: "{{ OLLAMA_API_DEFAULT_STATE }}"
+    restart_policy: always
+    recreate: yes
+    timeout: "{{ DOCKER_TIMEOUT }}"
+    env:
+      OLLAMA_DEBUG: "true"
     ports:
   #      - "{{ OLLAMA_API_PORT }}:11434"
     volumes:
@@ -56,3 +98,4 @@
       traefik.http.routers.ollama_proxy.entrypoints: ollama
       traefik.http.routers.ollama_proxy.rule: "{{ global_proxy_rule }}"
       traefik.http.routers.ollama_proxy.tls: "true"
+  when: with_nvidia_gpu is not defined or with_nvidia_gpu == False
