--- a/ansible/roles/infra/tasks/setup_https.yml
+++ b/ansible/roles/infra/tasks/setup_https.yml
@@ -69,6 +69,7 @@
       - "{{ NEXUS_DOCKER_PUSH_PORT }}:{{ NEXUS_DOCKER_PUSH_PORT }}"
       - "{{ FDROID_PORT }}:{{ FDROID_PORT }}"
       - "{{ GROCY_PORT }}:{{ GROCY_PORT }}"
+      - "{{ NOTEBOOK_PORT }}:{{ NOTEBOOK_PORT }}"
       - "{{ IT_TOOLS_PORT }}:{{ IT_TOOLS_PORT }}"
       - "{{ LABEL_STUDIO_PORT }}:{{ LABEL_STUDIO_PORT }}"
       - "{{ AUDIO_WEBUI_PORT }}:{{ AUDIO_WEBUI_PORT }}"
