--- a/ansible/roles/infra/files/traefik/traefik.toml
+++ b/ansible/roles/infra/files/traefik/traefik.toml
@@ -2,7 +2,7 @@
   sendAnonymousUsage = false
 
 [log]
-  level = "INFO"
+  level = "DEBUG"
   format = "common"
 
 # Configuring a buffer of 300 lines to limit writing to the disk too frequently
