--- a/ansible/roles/infra_productivity/tasks/main.yml
+++ b/ansible/roles/infra_productivity/tasks/main.yml
@@ -4,3 +4,6 @@
 
 - import_tasks: setup_it_tools.yml
   when: ("tools" not in SKIP_SERVICES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
+
+- import_tasks: setup_notebook.yml
+  when: ("notebook" not in SKIP_SERVICES) and ansible_architecture in ["aarch64", "amd64", "x86_64"]
