--- a/ansible/roles/infra_productivity/vars/main.yml
+++ b/ansible/roles/infra_productivity/vars/main.yml
@@ -1,11 +1,17 @@
 # https://hub.docker.com/r/linuxserver/grocy/tags
 GROCY_VERSION: "v4.0.3-ls227"
-GROCY_PORT: "8056"
+GROCY_PORT: "8070"
 GROCY_EXTERNAL_URL: "stock.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 GROCY_DEFAULT_STATE: stopped
 
 # https://hub.docker.com/r/corentinth/it-tools/tags
 IT_TOOLS_VERSION: "2023.11.2-7d94e11"
-IT_TOOLS_PORT: "8058"
+IT_TOOLS_PORT: "8071"
 IT_TOOLS_EXTERNAL_URL: "tools.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
 IT_TOOLS_DEFAULT_STATE: stopped
+
+# https://quay.io/repository/jupyter/docker-stacks-foundation?tab=tags
+NOTEBOOK_VERSION: "latest"
+NOTEBOOK_PORT: "8072"
+NOTEBOOK_EXTERNAL_URL: "notebook.{{ (DOMAIN_NAME |length > 0) | ternary(DOMAIN_NAME, DEFAULT_DOMAIN_NAME) }}"
+NOTEBOOK_DEFAULT_STATE: stopped
